--- a/untitled folder/criancaApp/criancaApp/Base.lproj/Main_iPad.storyboard
+++ b/untitled folder/criancaApp/criancaApp/Base.lproj/Main_iPad.storyboard
@@ -33,28 +33,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--View Controller-->
+        <!--Bluetooth View Controller-->
         <scene sceneID="Tud-ah-4MW">
             <objects>
-                <viewController id="xRi-PS-dxO" sceneMemberID="viewController">
+                <viewController id="xRi-PS-dxO" customClass="BluetoothViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="p7B-gF-cNC"/>
-                        <viewControllerLayoutGuide type="bottom" id="82F-Ms-RJm"/>
+                        <viewControllerLayoutGuide type="top" id="5fY-bn-iLU"/>
+                        <viewControllerLayoutGuide type="bottom" id="NdK-GG-bHN"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="CS6-Nk-mQQ">
+                    <view key="view" contentMode="scaleToFill" id="b5c-xs-WEI">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="humor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DBR-Kz-531">
-                                <rect key="frame" x="268" y="511" width="42" height="21"/>
+                            <slider appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7k2-Ud-AKz">
+                                <rect key="frame" x="396" y="537" width="118" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <color key="minimumTrackTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="maximumTrackTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="thumbTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </slider>
+                            <slider appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="A3c-Tx-1m2">
+                                <rect key="frame" x="396" y="620" width="118" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="minimumTrackTintColor" red="0.1019607843" green="0.73725490199999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="thumbTintColor" red="0.1019607843" green="0.73725490199999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </slider>
+                            <slider appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="1aH-cS-14X">
+                                <rect key="frame" x="396" y="705" width="118" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="doLedSliderChanged:" destination="xRi-PS-dxO" eventType="valueChanged" id="nxf-JY-Jko"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="gBle_LED_BSlider" destination="1aH-cS-14X" id="ff7-id-OCZ"/>
+                        <outlet property="gBle_LED_GSlider" destination="A3c-Tx-1m2" id="DCC-bd-cId"/>
+                        <outlet property="gBle_LED_RSlider" destination="7k2-Ud-AKz" id="dn6-iN-IwT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q6Q-6g-iZW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
